fixing footer spacing on repair and contact

--- a/css/carWorks.css
+++ b/css/carWorks.css
@@ -21,8 +21,12 @@ h6 {
 
 .nav-link {
     color:white;
+    font-size: 20px;
 }
 
+.nav-link:hover{
+    color: red;
+}
 .card-group {
     margin-top: 15px;
     padding: 5px;
@@ -63,3 +67,8 @@ h6 {
     text-align: center;
     margin:15px;
 }
+
+.btn:hover{
+    background-color: lightgray;
+}
+
